tests/snapshots/trace_cli@14439240379964399004.snap
---
source: tests/trace_cli.rs
info: "set structural\nrules"
---
allow_ref_pat_on_ref_mut: true -> false
match_constructor_through_ref: true -> false
ref_binding_on_inherited: "Error" -> "AllocTemporary"
simplify_deref_mut: true -> false

The two rulesets are described by the following sets of rules, with differences highlighted.

 place, m ⊢ p0: T0,  place, m ⊢ p1: T1                                            | place, m ⊢ p0: T0,  place, m ⊢ p1: T1
 ----------------------------------------- "Constructor"                          | ----------------------------------------- "Constructor"
 place, m ⊢ [p0, p1]: [T0, T1]                                                    | place, m ⊢ [p0, p1]: [T0, T1]

 value, ro ⊢ p0: &T0,  value, ro ⊢ p1: &T1                                        |  
 --------------------------------------------- "ConstructorRef"                   |  
 b, m ⊢ [p0, p1]: &[T0, T1]                                                       |  

 value, m ⊢ p0: &mut T0,  value, m ⊢ p1: &mut T1                                  |  
 --------------------------------------------------- "ConstructorRef"             |  
 b, m ⊢ [p0, p1]: &mut [T0, T1]                                                   |  

 value, ro ⊢ [p0, p1]: &T                                                         |  
 -------------------------- "ConstructorMultiRef"                                 |  
 b, m ⊢ [p0, p1]: &&T                                                             |  

 value, ro ⊢ [p0, p1]: &T                                                         |  
 -------------------------- "ConstructorMultiRef"                                 |  
 b, m ⊢ [p0, p1]: &&mut T                                                         |  

 value, ro ⊢ [p0, p1]: &T                                                         |  
 -------------------------- "ConstructorMultiRef"                                 |  
 b, m ⊢ [p0, p1]: &mut &T                                                         |  

 value, m ⊢ [p0, p1]: &mut T                                                      |  
 ------------------------------ "ConstructorMultiRef"                             |  
 b, m ⊢ [p0, p1]: &mut &mut T                                                     |  

 place, ro ⊢ p: T                                                                 | place, ro ⊢ p: T
 ------------------ "Deref"                                                       | ------------------ "Deref"
 b, m ⊢ &p: &T                                                                    | b, m ⊢ &p: &T

 place, m ⊢ p: T                                                                  | place, m ⊢ p: T
 ----------------------- "Deref"                                                  | ----------------------- "Deref"
 b, m ⊢ &mut p: &mut T                                                            | b, m ⊢ &mut p: &mut T

 place, ro ⊢ p: T                                                                 |  
 ------------------- "DerefMutWithShared"                                         |  
 b, m ⊢ &p: &mut T                                                                |  

 value, m ⊢ x: &T                                                                 | value, m ⊢ x: &T
 --------------------- "BindingBorrow"                                            | --------------------- "BindingBorrow"
 place, m ⊢ ref x: T                                                              | place, m ⊢ ref x: T

                                                                                  | value, m ⊢ x: &&T
                                                                                  | ---------------------- "BindingBorrow"
                                                                                  | value, m ⊢ ref x: &T

                                                                                  | value, m ⊢ x: &&mut T
                                                                                  | -------------------------- "BindingBorrow"
                                                                                  | value, m ⊢ ref x: &mut T

 value, m ⊢ x: &mut T                                                             | value, m ⊢ x: &mut T
 ------------------------- "BindingBorrow"                                        | ------------------------- "BindingBorrow"
 place, m ⊢ ref mut x: T                                                          | place, m ⊢ ref mut x: T

                                                                                  | value, m ⊢ x: &mut &T
                                                                                  | -------------------------- "BindingBorrow"
                                                                                  | value, m ⊢ ref mut x: &T

                                                                                  | value, m ⊢ x: &mut &mut T
                                                                                  | ------------------------------ "BindingBorrow"
                                                                                  | value, m ⊢ ref mut x: &mut T

                                                                                  | 
 ------------- "Binding"                                                          | ------------- "Binding"
 b, m ⊢ x: T                                                                      | b, m ⊢ x: T

                                                                                  | 
 ----------------- "Binding"                                                      | ----------------- "Binding"
 b, m ⊢ mut x: T                                                                  | b, m ⊢ mut x: T

The current options can be fully described as the following set of rules.
The typing predicate looks like `b, m ⊢ p: T`, where
- `b` is `place` or `value` and indicates the place context aka binding mode;
- `m` is `rw` or `ro` and indicates whether we have mutable or read-only access to the original scrutinee;
- `p` is a pattern;
- `T` is a type.

place, m ⊢ p0: T0,  place, m ⊢ p1: T1
----------------------------------------- "Constructor"
place, m ⊢ [p0, p1]: [T0, T1]

place, ro ⊢ p: T
------------------ "Deref"
b, m ⊢ &p: &T

place, m ⊢ p: T
----------------------- "Deref"
b, m ⊢ &mut p: &mut T

value, m ⊢ x: &T
------------------ "BindingBorrow"
b, m ⊢ ref x: T

value, m ⊢ x: &mut T
---------------------- "BindingBorrow"
b, m ⊢ ref mut x: T


------------- "Binding"
b, m ⊢ x: T


----------------- "Binding"
b, m ⊢ mut x: T
